cargo-features = ["edition2024"]

[package]
name = "anchor-escrow"
version = "0.1.0"
description = "Anchor Escrow"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"]}
toml_edit = "0.20.0"
anchor-spl = "0.30.0"
solana-program = "1.18.13"
# Solana dependency tree fixes
ahash = "=0.8.11"
solana-readonly-account = "1.2.0"
